# internal/oas/oas_validators_gen.go
@@ -378,6 +378,17 @@ func (s *Order) Validate() error {
 			Error: err,
 		})
 	}
+	if err := func() error {
+		if s.PackingLists == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "packing_lists",
+			Error: err,
+		})
+	}
 	if len(failures) > 0 {
 		return &validate.Error{Fields: failures}
 	}
